# nostrc

./: .gitignore  .gitmodules  AGENTS.md  API.md  ARCHITECTURE.md  ASYNC_FENCE_INVENTORY.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  MAINTENANCE.md  NipOptions.cmake  README.md  TEMPLATE_AUDIT.md  TEST_RESULTS.md  delete_all.sh  flake.nix  issues.jsonl  marmot-issues.jsonl  new-issues.jsonl  repro.sh  run_and_dump.sh  valgrind.supp
Testing/: CMakeLists.txt
Testing/Temporary/: CTestCostData.txt
Testing/fixtures/: events.jsonl  example_events.jsonl  keypairs.json
Testing/src/: mock_relay.c  mock_relay_server.c  test_harness.c
Testing/tests/: test_harness_example.c  test_mock_relay.c  test_mock_relay_integration.c  test_mock_relay_server.c  test_nip46_mock_relay.c  test_signer_integration.c
Testing/tools/: mock-relay-main.c
apps/: CMakeLists.txt
apps/blossom-cache/: CMakeLists.txt  README.md
apps/gnostr/: CMakeLists.txt  DartConfiguration.tcl  gnostr  gnostr-test-relays  gobject  libgo  libnostr  nips  resources.c  run-gnostr.sh  signer_proxy.c  signer_proxy.h
apps/gnostr-signer/: ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  COMPLETION_SUMMARY.md  DAEMON_DEPLOYMENT.md  DAEMON_IMPROVEMENTS.md  DAEMON_QUICKSTART.md  DEVELOPMENT.md  README.md  TODO.md  meson.build
apps/grelay/: CMakeLists.txt
apps/relayctl/: CMakeLists.txt
apps/relayd/: CMakeLists.txt  relay.toml.example
benchmark/: CMakeLists.txt  gnostr_bench_real_memory.c  relay_perf_baseline.c
gobject/: CMakeLists.txt  Makefile  meson.build  meson_options.txt
gobject/examples/: connect_publish.c
gobject/include/: crypto_utils_gobject.h  nostr-enums.h  nostr-error.h  nostr-glib-version.h.in  nostr-glib.h  nostr-types.h  nostr_async.h  nostr_event.h  nostr_event_bus.h  nostr_filter.h  nostr_json.h  nostr_keys.h  nostr_nip19.h  nostr_nip49.h  nostr_pointer.h  nostr_pool.h  nostr_query_batcher.h  nostr_relay.h  nostr_relay_store.h  nostr_simple_pool.h  nostr_subscription.h  nostr_subscription_registry.h  nostr_tag_list.h
gobject/src/: crypto_utils.c  nostr-enums.c  nostr_async.c  nostr_event.c  nostr_event_bus.c  nostr_filter.c  nostr_json.c  nostr_keys.c  nostr_nip46_bunker.c  nostr_pointer.c  nostr_pool.c  nostr_query_batcher.c  nostr_relay.c  nostr_relay_store.c  nostr_simple_pool.c  nostr_simple_pool_async.c  nostr_simple_pool_goroutine.c  nostr_subscription.c  nostr_subscription_registry.c  nostr_tag_list.c
gobject/tests/: test_nostr_event.c
libgo/: CMakeLists.txt  LIBGO.md
libgo/examples/: arrays_demo.c  chan_bench.c  channels.c  error_demo.c  go_context_demo.c  go_select_demo.c  go_ticker_demo.c  hash_map_demo.c  helloworld.c  long_adder_demo.c  refptr_demo.c
libgo/fiber/: README.md
libgo/include/: blocking_executor.h  channel.h  channel_debug.h  context.h  counter.h  error.h  fiber_hooks.h  go.h  go_auto.h  gtime.h  hash_map.h  int_array.h  macros.h  refptr.h  select.h  string_array.h  ticker.h  wait_group.h
libgo/src/: blocking_executor.c  channel.c  channel_debug.c  context.c  counter.c  error.c  fiber_hooks_stub.c  go-auto-internal.h  go.c  hash_map.c  int_array.c  metrics_stub.c  select.c  string_array.c  ticker.c  wait_group.c
libgo/tests/: error_test.c  go_channel_close_test.c  go_channel_stress_test.c  go_channel_test.c  go_context_cancel_test.c  go_context_stress_test.c  go_context_timeout_test.c  go_select_cancel_test.c  go_select_closed_test.c  go_select_multi_test.c  go_select_test.c  go_ticker_test.c  go_wait_group_test.c  hash_map_test2.c  int_array_test.c  long_adder_stress_test.c  refptr_test.c  string_array_test.c
libhanami/: CMakeLists.txt  hanami.pc.in
libhanami/src/: hanami-blossom-client.c  hanami-bud02-auth.c  hanami-config.c  hanami-grasp.c  hanami-index.c  hanami-nostr.c  hanami-odb-backend.c  hanami-refdb-backend.c  hanami-transport.c  hanami.c
libhanami/tests/: test_hanami_blossom_client.c  test_hanami_bud02_auth.c  test_hanami_config.c  test_hanami_grasp.c  test_hanami_index.c  test_hanami_integration.c  test_hanami_nostr.c  test_hanami_odb_backend.c  (+3 more)
libjson/: CMakeLists.txt  nostr_json.pc.in
libmarmot/: ARCHITECTURE.md  CMakeLists.txt  README.md  marmot.pc.in  meson.build  meson_options.txt
libnostr/: CMakeLists.txt  nostr.pc  nostr.pc.in
marmot-gobject/: CMakeLists.txt  README.md  marmot-gobject.pc.in  meson.build  meson_options.txt
nips/: CMakeLists.txt  create_nip.sh  generate_cmake.sh
nostr-gobject/: CMakeLists.txt  Makefile  README.md  gir_stubs.c  meson.build  meson_options.txt
nostr-gtk/: CMakeLists.txt  README.md  meson.build  meson_options.txt
nson/: CMakeLists.txt  README.md  example.c  nson.c  nson.h
pkcs11/: CMakeLists.txt  gnostr-p11.c  gnostr-p11.h  gnostr.module
signet/: .env  .env.example  CMakeLists.txt  Dockerfile  INTEGRATION.md  README.md  docker-compose.yml  meson.build  meson.options  policies.toml.example  signet.conf.example  signet.toml.example
tests/: CMakeLists.txt  concurrency_testkit.h  fuzz_driver_main.c  fuzz_envelope_deserialize.c  fuzz_event_deserialize.c  fuzz_event_parse.c  fuzz_filter_parse.c  fuzz_verify_wrapper.c  microbench_json  microbench_json.c  test_brown_list.c  test_channel_incremental.c  test_concurrency_channels.c  test_concurrency_subscription_shutdown.c  test_connection_shutdown_order.c  test_crypto_utils.c  test_envelope.c  test_envelope_parse.c  test_event_canonical.c  test_event_extra.c  test_event_priority.c  test_filters_move_semantics.c  test_glib_async_integration.c  test_json_envelope.c  test_json_event.c  test_json_event_fuzzlite.c  test_json_filter.c  test_json_filter_fuzzlite.c  test_json_filter_robust.c  test_json_filter_tags.c  test_json_int_array.c  test_json_parse.c  test_json_raw.c  test_ndb_ingestion_simple.c  test_nip04_aead.c  test_nip04_legacy_toggle.c  test_nip86_policy.c  test_pointer.c  test_profile_fetch_simulation.c  test_profile_fetch_stress.c  (+15 more)
tools/: CMakeLists.txt  btcore.sh  diagnose_threads.sh  run-broadway.sh  test_relay_eose.c  test_relay_eose.sh
(+2957 files in other folders)
